--- a/css/default.css
+++ b/css/default.css
@@ -2,21 +2,507 @@
   box-sizing: border-box;
 }
 body {
-  font-family: sans-serif;
   margin: 0;
-  padding: 0;
-  background: #000000;
+  font-family: Arial, sans-serif;
+  color: #666;
+  /* background-color: #fff; */
+  /* color: #333; */
+  /* background-color: #212121; */
+  /* color: #837a7a; */
 }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  border-bottom: 1px solid #e7e7e7;
+  /* max-width: 1200px; */
+  margin: 0 auto;
+  background: #fff;
+}
+
+@media (max-width: 1240px) {
+  header {
+    padding: 20px;
+  }
+}
+@media (max-width: 768px) {
+  header {
+    position: fixed;
+    /* background: #222; */
+    width: 100%;
+    font-size: 1em;
+    z-index: 999;
+  }
+
+  #home {
+    padding-top: 80px;
+  }
+}
+
 h1 {
-  color: #989898;
+  margin: 0;
   font-size: 1em;
-  font-weight: normal;
-  text-align: center;
+  font-family: "Shrikhand", serif;
+  /* color: #fff; */
 }
+@media (min0-width: 769) {
+  h1 {
+    /* margin: 0; */
+    font-size: 2.5em;
+    /* font-family: "Shrikhand", serif; */
+    /* color: #fff; */
+  }
+}
+nav {
+  position: relative;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+nav ul li {
+  margin-left: 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #333;
+  color: #837a7a;
+}
+
+@media (max-width: 768px) {
+  nav ul li {
+    padding: 20px;
+  }
+}
+
+.menu-icon {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.menu-icon .bar {
+  width: 25px;
+  height: 3px;
+  background-color: #1bc5e9;
+  margin: 4px 0;
+}
+
+main {
+  padding: 20px;
+}
+
+section {
+  /* max-width: 1200px; */
+  margin: 0 auto;
+}
+
+h2 {
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
 p {
-  color: #717171;
-  padding: 5px 10px;
+  max-width: 600px;
 }
-#paypal-button-container {
+.grid {
+  display: flex;
+  gap: 6px;
+  align-items: flex-start;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: center;
+  /* max-width: 1200px; */
+  margin: 0 auto;
+  transition: all 1s;
+}
+
+.visible {
+  opacity: 1;
+  display: block;
+}
+
+.grid-item {
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+}
+
+.grid-item img {
+  width: 100%;
+  height: auto;
+  display: block;
+  transition: transform 0.1s ease;
+}
+
+.grid-item:hover img {
+  transform: scale(1.05);
+}
+
+.grid-item.enlarged {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-item.enlarged img {
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: contain;
+}
+
+footer {
+  text-align: center;
+  padding: 50px 0;
+  background-color: #f8f8f8;
+  color: #999;
+  background-color: #000000;
+  color: #373737;
+}
+
+#mobile-nav-close-li {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+#mobile-nav-close {
+  display: none;
+  padding: 5px 7px;
+  font-weight: bold;
+  border: 0;
+  background: #444;
+  color: #ccc;
+  border-radius: 3px;
+}
+
+@media (max-width: 768px) {
+  #gallery {
+    margin-top: 113px;
+  }
+
+  #mobile-nav-close {
+    display: block;
+  }
+  nav ul {
+    flex-direction: column;
+    display: none;
+    background-color: #f8f8f8;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 999;
+    padding-top: 50px;
+  }
+
+  nav ul li {
+    margin: 10px 0;
+    text-align: center;
+  }
+
+  nav ul li a {
+    color: #fff;
+    display: block;
+  }
+
+  .menu-icon {
+    display: flex;
+  }
+
+  #nav-links {
+    background-color: #000000;
+  }
+}
+
+.grid-item.enlarged {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-item.enlarged img {
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: contain;
+}
+
+.prev,
+.next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 24px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
+  border: none;
+  cursor: pointer;
+  z-index: 1001;
+}
+
+.prev {
+  left: 10px;
+}
+
+.next {
+  right: 10px;
+}
+
+/* Contact Form Styles */
+#contact {
+  background: #474747;
+  padding: 25px;
+  text-align: center;
+  color: #fff;
+  margin-top: 6px;
+}
+
+#contact p {
+  max-width: 100%;
+}
+
+form {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #353535;
+  text-align: left;
+}
+
+form label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+form input,
+form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+form button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #3c8fa1;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+form button:hover {
+  background-color: #49b1c7;
+}
+
+#about {
+  background-color: #fff;
+}
+
+@media (width > 1100px) {
+  #about {
+    background-color: #fff;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+  #about img {
+    width: 50%;
+  }
+}
+
+#features {
+  text-align: right;
+}
+#features a {
+  color: #3c8fa1;
+  font-size: 1.2em;
+  margin-top: 1.3em;
+}
+
+#features li {
+  margin-top: 1.2em;
+  list-style: none;
+}
+
+#phone-num {
+  color: #3ab1cb;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.bio-img {
+  width: 100%;
+}
+
+.hidden {
+  display: none;
+}
+
+/* LOADING CSS */
+#loading {
+  margin: 0 auto;
+  position: relative;
+  border-radius: 3px;
+  width: 100%;
+  max-width: 200px;
+}
+#loading:after {
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+#loading .loading-box {
+  position: absolute;
+  width: 100%;
+  border-radius: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  top: 50%;
+  border-bottom: 1em solid #3d8fa1;
+  transform-origin: center;
+}
+#loading .loading-box:after {
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+
+@-webkit-keyframes step0 {
+  0% {
+    opacity: 0.1;
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    opacity: 0.9;
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+
+@keyframes step0 {
+  0% {
+    opacity: 0.1;
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    opacity: 0.9;
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+#loading .loading-box.lb0 {
+  -webkit-animation: step0 1s infinite alternate;
+  animation: step0 1s infinite alternate;
+  width: 100%;
+}
+
+@-webkit-keyframes step1 {
+  25% {
+    opacity: 0.1;
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    opacity: 0.9;
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+
+@keyframes step1 {
+  25% {
+    opacity: 0.1;
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    opacity: 0.9;
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+#loading .loading-box.lb1 {
+  -webkit-animation: step1 1s infinite alternate;
+  animation: step1 1s infinite alternate;
+  width: 75%;
+}
+
+@-webkit-keyframes step2 {
+  50% {
+    opacity: 0.1;
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    opacity: 0.9;
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+
+@keyframes step2 {
+  50% {
+    opacity: 0.1;
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    opacity: 0.9;
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+#loading .loading-box.lb2 {
+  -webkit-animation: step2 1s infinite alternate;
+  animation: step2 1s infinite alternate;
+  width: 50%;
+}
+
+@-webkit-keyframes step3 {
+  75% {
+    opacity: 0.1;
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    opacity: 0.9;
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+
+@keyframes step3 {
+  75% {
+    opacity: 0.1;
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    opacity: 0.9;
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+#loading .loading-box.lb3 {
+  -webkit-animation: step3 1s infinite alternate;
+  animation: step3 1s infinite alternate;
+  width: 25%;
 }
